--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/toonchavez8" target="_blank">Miguel Chavez</a>.
   </div>
 </body>
 </html>
