--- a/index.html
+++ b/index.html
@@ -18,7 +18,32 @@
 <body>
 <main class="container">
     <div class="card">
-        
+        <div class="card-content-1 hide">
+            <div class="star">
+                <img src="images/icon-star.svg" alt="icon-star">
+            </div>
+            <h1>How did we do?</h1>
+            <div class="text">Please let us know how we did with your support request. All feedback is appreciated 
+                to help us improve our offering!</div>
+            <div class="ratingWrapper">
+                <div class="ratingButton"><div>1</div></div>
+                <div class="ratingButton"><div>2</div></div>
+                <div class="ratingButton"><div>3</div></div>
+                <div class="ratingButton"><div>4</div></div>
+                <div class="ratingButton"><div>5</div></div>
+            </div>
+            <div class="submitButton"><div>submit</div></div>
+        </div>
+      
+        <div class="card-content-2">
+            <img src="./images/illustration-thank-you.svg" alt="Thank You">
+            <div class="result">  
+                <div>you selected <span>X</span>out of 5</div>
+            </div>
+            <h2>Thank you!</h2>
+                <div class="text">We appreciate you taking the time to give a rating. If you ever need more support, 
+                    don’t hesitate to get in touch!</div>
+        </div>
     </div>
 </main>
 </body>
