added logic and button funcationality

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body>
 <main class="container">
     <div class="card">
-        <div class="card-content-1 hide">
+        <div class="card-content-1 ">
             <div class="star">
                 <img src="images/icon-star.svg" alt="icon-star">
             </div>
-            <h1>How did we do?</h1>
+            <h1 class="title">How did we do?</h1>
             <div class="text">Please let us know how we did with your support request. All feedback is appreciated 
                 to help us improve our offering!</div>
             <div class="ratingWrapper">
@@ -35,16 +35,17 @@
             <div class="submitButton"><div>submit</div></div>
         </div>
       
-        <div class="card-content-2">
+        <div class="card-content-2 hide">
             <img src="./images/illustration-thank-you.svg" alt="Thank You">
             <div class="result">  
-                <div>you selected <span>X</span>out of 5</div>
+                <div>You selected <span class="score">4</span> out of 5</div>
             </div>
-            <h2>Thank you!</h2>
+            <h2 class="title">Thank you!</h2>
                 <div class="text">We appreciate you taking the time to give a rating. If you ever need more support, 
                     don’t hesitate to get in touch!</div>
         </div>
     </div>
 </main>
+<script src="/JS/app.js"></script>
 </body>
 </html>
