added json animation and styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Frontend Mentor | Interactive rating component | Challenge 01</title>
 
 </head>
-<body>
+<body>Ill
 <main class="container">
     <div class="card">
         <div class="card-content-1 ">
@@ -36,7 +36,9 @@
         </div>
       
         <div class="card-content-2 hide">
-            <img src="./images/illustration-thank-you.svg" alt="Thank You">
+
+            <div class="lottie"><script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js" class="lottie"></script>
+            <lottie-player src="/images/illustration-thank-you.json" background="#0"  speed="1" style="width: 18rem; height: 18rem;"  loop autoplay class="lottie"></lottie-player></div>
             <div class="result">  
                 <div>You selected <span class="score">4</span> out of 5</div>
             </div>
